# loom

./: Cargo.toml  README.md
crates/berth/: Cargo.toml
crates/berth/src/: artifact.rs  doctor.rs  main.rs  types.rs
crates/fit-models/: Cargo.toml
crates/fit-models/src/: catalog.rs  estimator.rs  hardware.rs  main.rs  types.rs
data/: chips.toml
data/catalog/: qwen3.5.toml
docs/: ARCHITECTURE.md  DEVICE-CLI-DESIGN.md
trading-agent/: .env  .env.example  .gitignore  README.md  pyproject.toml
trading-agent/examples/: high_risk_query.py  low_risk_query.py  review_rejected.py  verify_minimax_full_phase3.py  verify_minimax_phase3.py
trading-agent/src/sentra/: __init__.py  env.py  fallbacks.py  graph.py  llm.py  schemas.py  state.py
trading-agent/src/sentra/nodes/: __init__.py  analyst.py  blocked.py  data_fetch.py  human_review.py  planner.py  recommend.py  risk_officer.py  strategist.py
trading-agent/src/sentra/tools/: __init__.py  http.py  market.py  technical.py
trading-agent/tests/: conftest.py  test_data_fetch.py  test_env.py  test_fallbacks.py  test_graph.py  test_llm.py  test_market.py  test_phase3_helpers.py  test_technical.py
