[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "sentra"
version = "0.1.0"
description = "Sentra trading agent demo built with LangGraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2.60",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sentra"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
