[package]
name = "berth"
version = "0.1.0"
edition = "2024"
description = "What Qwen3.5 models can this machine run?"

[[bin]]
name = "berth"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
