[package]
name = "fit-models"
version = "0.1.0"
edition = "2024"
description = "What models can this machine run?"

[[bin]]
name = "fit-models"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
